--- a/Task1.Solution/Task1.Solution.csproj
+++ b/Task1.Solution/Task1.Solution.csproj
@@ -42,11 +42,12 @@
   <ItemGroup>
     <Compile Include="Api\IPasswordCheckerService.cs" />
     <Compile Include="Api\ISqlRepository.cs" />
+    <Compile Include="ViewModels\Role.cs" />
+    <Compile Include="ViewModels\User.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Repositories\SqlRepositoryStub.cs" />
     <Compile Include="Services\PasswordCheckerService.cs" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Repositories\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
