RandomFileGenerator was added.

--- a/Task2.Solution/Task2.Solution.csproj
+++ b/Task2.Solution/Task2.Solution.csproj
@@ -40,7 +40,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Api\IRandomFileGenerator.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="RandomFileGenerators\RandomBytesFileGenerator.cs" />
+    <Compile Include="RandomFileGenerators\RandomCharsFileGenerator.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
