Api, Models, Observables and Observers were added.

--- a/Task3.Solution/Task3.Solution.csproj
+++ b/Task3.Solution/Task3.Solution.csproj
@@ -40,7 +40,14 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Api\IObservable.cs" />
+    <Compile Include="Api\IObserver.cs" />
+    <Compile Include="Observables\Stock.cs" />
+    <Compile Include="Observers\Broker.cs" />
+    <Compile Include="Observers\Bank.cs" />
+    <Compile Include="Models\StockInfo.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
