AverageCalculator was added.

--- a/Task4.Solution/Task4.Solution.csproj
+++ b/Task4.Solution/Task4.Solution.csproj
@@ -40,7 +40,11 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Api\ICalculateAverage.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Services\Client.cs" />
+    <Compile Include="Services\MeanCalculator.cs" />
+    <Compile Include="Services\MedianCalculator.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
